infrastructure/ingress/user-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 29000
